<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/m_refresh"
        android:icon="@mipmap/ic_action_refresh"
        android:orderInCategory="80"
        android:title="@string/refresh"
        android:showAsAction="always"/>

    <item
        android:id="@+id/m_sleep"
        android:icon="@mipmap/ic_action_hibernate"
        android:orderInCategory="80"
        android:title="@string/sleep"
        android:showAsAction="always"/>

    <item
        android:id="@+id/m_start"
        android:icon="@mipmap/ic_action_run"
        android:orderInCategory="80"
        android:title="@string/start"
        android:visible="false"
        android:showAsAction="always"/>

    <item
        android:id="@+id/m_add"
        android:icon="@mipmap/ic_action_add"
        android:orderInCategory="80"
        android:title="@string/add"
        android:showAsAction="always"/>

    <item
        android:id="@+id/m_remove"
        android:icon="@mipmap/ic_action_remove"
        android:orderInCategory="80"
        android:title="@string/remove"
        android:visible="false"
        android:showAsAction="never"/>

    <item
        android:id="@+id/m_auto_sleep"
        android:icon="@mipmap/ic_action_cutoff"
        android:orderInCategory="80"
        android:title="@string/stop_auto_sleep"
        android:showAsAction="never"/>

    <item
        android:id="@+id/m_about"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="80"
        android:title="@string/about"
        android:showAsAction="never"/>
</menu>